--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
             <h1>Pop Goes The Knee</h1>
             <nav>
                 <ul>
-                    <li>2022 Calendar</li>
+                    <li>Calendar</li>
                     <li>Projects</li>
                 </ul>
             </nav>
